syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example";

service UserServce{
rpc GetUser(UserRequest) returns (UserResponse) {};
}

message UserRequest{
  int32 id =1;
}

message UserResponse{
  string name=1;
  int32 age =2;
}

//mvn clean start before starting the server